set up ktlint linter